--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,36 @@
      xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="10"
     tools:context=".MainActivity">
 
 
     <TextView
-       android:background="#f20"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"/>
+        android:layout_weight="1"
 
+        android:textSize="40dp"
+        android:text="View 1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#EEBFF3"
+        android:textColor="#0073FF" />
 
-    </LinearLayout>
+    <TextView
+        android:layout_weight="5"
+        android:textSize="40dp"
+        android:text="View 2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#8EEA7D"
+        android:textColor="#0073FF" />
+    <TextView
+        android:layout_weight="7"
+        android:textSize="40dp"
+        android:text="View 3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#DF1956"
+        android:textColor="#C6D2E1" />
+</LinearLayout>
 
